force-app/main/default/objects/Warranty_Claim__c/Warranty_Claim__c.object-meta.xml
<CustomObject>
    <description>The Warranty Claim object tracks customer warranty requests linked to Accounts. It captures Status (New, In Progress, Approved, Rejected), Claim Date, Claim Amount, and Customer. Commonly used for service-triage visibility, approval tracking, and reimbursement reporting.</description>
    <label>Warranty Claim</label>
    <nameField>
        <displayFormat>WC-{0000}</displayFormat>
        <label>Warranty Claim Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>