force-app/main/default/objects/Warranty_Claim__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <description>Stores the monetary amount requested or approved for the warranty claim.</description>
    <inlineHelpText>Enter the claim amount in your corporate currency.</inlineHelpText>
    <label>Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>