force-app/main/default/objects/Warranty_Claim__c/fields/Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date__c</fullName>
    <description>Stores the date when the customer submitted the warranty claim.</description>
    <inlineHelpText>Enter the date the warranty claim was received.</inlineHelpText>
    <label>Claim Date</label>
    <type>Date</type>
</CustomField>