force-app/main/default/objects/Warranty_Claim__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the warranty claim to the customer account associated with the request.</description>
    <inlineHelpText>Choose the customer account that owns this warranty claim.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>WarrantyClaims</relationshipName>
    <type>Lookup</type>
</CustomField>